--- a/yy/yycms.admin/Views/News/Index.cshtml
+++ b/yy/yycms.admin/Views/News/Index.cshtml
@@ -5,7 +5,7 @@
             <div>
                 <ol class="breadcrumb">
                     <li><a href="/Admin/index">首页</a></li>
-                    <li class="active">接口列表</li>
+                    <li class="active">新闻列表</li>
                    <a href="" ng-click="IHelp()" style="float:right"><i class="icon_question_alt2"></i> 帮助</a>
                 </ol>
                 <table class="table ListTable helpStep1">
