--- a/yy/yycms.admin/Views/Shared/head.cshtml
+++ b/yy/yycms.admin/Views/Shared/head.cshtml
@@ -53,7 +53,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/spider/news"><i class="ace-icon fa fa-tasks"></i></a></li>
                 <li><a href="/message/index"><i class="ace-icon fa fa-envelope"></i></a></li>
-                <li><a href="/API/BannerTypes">接口</a></li>
+                <li><a href="/Help/Index">接口</a></li>
                 <li><a href="#" ng-click="LoginOut()"><i class="fa fa-power-off"></i></a></li>
             </ul>
         </div>
