--- a/yy/yycms.admin/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/yy/yycms.admin/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -1,4 +1,4 @@
-@using System.Web.Http
+Ôªø@using System.Web.Http
 @using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using yycms.admin.Areas.HelpPage
@@ -13,9 +13,9 @@
 }
 <style type="text/css">
     .panel-heading{padding: 12px 7px;}
-    .panel-title{font-family: Œ¢»Ì—≈∫⁄;}
+    .panel-title{font-family: √é¬¢√à√≠√ë√Ö¬∫√ö;}
     .table>thead:first-child>tr:first-child>th{   font-weight: normal;
-    font-family: Œ¢»Ì—≈∫⁄;}
+    font-family: √é¬¢√à√≠√ë√Ö¬∫√ö;}
     .table>thead>tr>th{ border-bottom: 1px solid #ddd;}
 </style>
 <div class="panel-group" id="@Model.Key.ControllerName" role="tablist" aria-multiselectable="true">
@@ -36,11 +36,11 @@
                 <table class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th width="50px">±‡∫≈</th>
-                            <th width="80px">∑Ω Ω</th>
-                            <th>Ω”ø⁄√˚≥∆</th>
-                            <th>√Ë ˆ</th>
-                            <th>≤Ÿ◊˜</th>
+                            <th width="50px">ÁºñÂè∑</th>
+                            <th width="80px">ÊñπÂºè</th>
+                            <th>Êé•Âè£ÂêçÁß∞</th>
+                            <th>ÊèèËø∞</th>
+                            <th>Êìç‰Ωú</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -61,7 +61,7 @@
                                     }
                                     else
                                     {
-                                        <p>¬‘</p>
+                                        <p>Documentation2</p>
                                     }
                                 </td>
                                 <td>
