--- a/yy/yycms.admin/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
+++ b/yy/yycms.admin/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
@@ -4,16 +4,15 @@
 @using System.Threading
 @using yycms.admin.Areas.HelpPage.ModelDescriptions
 @model IList<ParameterDescription>
-
 @if (Model.Count > 0)
 {
     <table class="table table-striped table-hover">
         <thead>
             <tr>
-            <th>参数名称</th>
-            <th>描述</th>
-            <th>类型</th>
-            <th>附加信息</th>
+                <th>Property</th>
+                <th>Summary</th>
+                <th>Type</th>
+                <th>Note</th>
             </tr>
         </thead>
         <tbody>
@@ -34,20 +33,19 @@
                             foreach (var annotation in parameter.Annotations)
                             {
                                 <p>@annotation.Documentation</p>
-                            }
+}
                         }
                         else
                         {
-                            <p>无。</p>
-                        }
+                            <p>Annotations Documentation</p>
+}
                     </td>
                 </tr>
-            }
+}
         </tbody>
     </table>
 }
 else
 {
-    <p>无。</p>
+    <p>Documentation</p>
 }
-
