--- a/yy/yycms.admin/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/yy/yycms.admin/Areas/HelpPage/Views/Help/Index.cshtml
@@ -1,10 +1,9 @@
-@using System.Web.Http.Controllers
+锘緻using System.Web.Http.Controllers
 @using System.Web.Http.Description
 @using System.Collections.ObjectModel
 @model Collection<ApiDescription>
-
 @{
-    ViewBag.Title = "API接口文档";
+    ViewBag.Title = "Help";
     ILookup<HttpControllerDescriptor, ApiDescription> apiGroups = Model.ToLookup(api => api.ActionDescriptor.ControllerDescriptor);
 }
 @RenderPage("~/Views/Shared/leftMenu.cshtml")
@@ -13,22 +12,20 @@
         <div class="row">
             <div>
                 <ol class="breadcrumb">
-                    <li><a href="/Admin/index">首页</a></li>
-                    <li class="active">接口列表</li>
-                    <a href="" ng-click="IHelp()" style="float:right"><i class="icon_question_alt2"></i> 帮助</a>
+                    <li><a href="/Admin/index">棣栭〉</a></li>
+                    <li class="active">鎺ュ彛鍒楄〃</li>
+                    <a href="" ng-click="IHelp()" style="float:right"><i class="icon_question_alt2"></i>  甯姪</a>
                 </ol>
-
                 <div class="alert alert-warning alert-dismissible" role="alert">
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">×</span>
+                        <span aria-hidden="true">&times;</span>
                     </button>
-                    接口用于调用系统后台功能。
+                    鎺ュ彛鐢ㄤ簬璋冪敤绯荤粺鍚庡彴鍔熻兘
                 </div>
-
-                @foreach (var group in apiGroups.OrderBy(x=>x.Key.ControllerName).ToList())
+                @foreach (var group in apiGroups.OrderBy(x => x.Key.ControllerName).ToList())
                 {
                     @Html.DisplayFor(m => group, "ApiGroup")
-                }
+}
             </div>
         </div>
     </div>
