--- a/yy/yycms.admin/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/yy/yycms.admin/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,4 +1,4 @@
-@using System.Web.Http
+锘緻using System.Web.Http
 @using yycms.admin.Areas.HelpPage.ModelDescriptions
 @model ModelDescription
 
@@ -7,10 +7,10 @@
     <div class="container-fluid">
         <div class="row">
             <ol class="breadcrumb">
-                <li><a href="/Admin/index">首页</a></li>
-                <li><a href="/Help/index">接口列表</a></li>
-                <li class="active">接口详情</li>
-                <a href="" ng-click="IHelp()" style="float:right"><i class="icon_question_alt2"></i> 帮助</a>
+                <li><a href="/Admin/index">棣栭〉</a></li>
+                <li><a href="/Help/index">鎺ュ彛鍒楄〃</a></li>
+                <li class="active">Resource</li>
+                <a href="" ng-click="IHelp()" style="float:right"><i class="icon_question_alt2"></i>  甯姪</a>
             </ol>
             <div class="bs-callout bs-callout-success">
                 <h4>@Model.Name</h4>
@@ -24,7 +24,7 @@
                 <div class="form-group">
                     <div class="col-md-12 BtmLayer" id="BtmLayer">
                         <a href="/Help" class="btn btn-success btn-lg hvr-shadow-radial">
-                            <i class="arrow_carrot-left"></i> 返回列表
+                            <i class="arrow_carrot-left"></i> Back
                         </a>
                     </div>
                 </div>
