--- a/yy/yycms.admin/Views/Admin/Index.cshtml
+++ b/yy/yycms.admin/Views/Admin/Index.cshtml
@@ -1,15 +1,14 @@
 ﻿@RenderPage("~/Views/Shared/leftMenu.cshtml")
 <style type="text/css">
     .tab-content {
-    padding-top: 10px;
-}
+        padding-top: 10px;
+    }
 </style>
 <div id="content-wrapper" ng-controller="IndexCtrl">
     <ol class="breadcrumb">
         <li class="active">首页</li>
         <a href="" ng-click="IHelp()" style="float:right"><i class="icon_question_alt2"></i> 帮助</a>
     </ol>
-
     <ul class="nav nav-tabs" ng-init="TabIndex=0">
         <li role="presentation" ng-class="{active:TabIndex==0}"><a href="javascript:void(0)" ng-click="TabIndex=0">总览</a></li>
         <li role="presentation" ng-class="{active:TabIndex==1}"><a href="javascript:void(0)" ng-click="TabIndex=1">流量统计</a></li>
@@ -17,33 +16,31 @@
     <div class="tab-content">
         <div class="tab-pane" ng-class="{active:TabIndex==0}">
             <div class="alert alert-warning alert-dismissible" role="alert" style="margin:0px;">
-               粉丝全国分布图总览。
+                粉丝全国分布图总览。
             </div>
             <div class="col-md-12" style="height:490px;padding:0px;margin-top:10px; display:none;" id="container"></div>
         </div>
         <div class="tab-pane" ng-class="{active:TabIndex==1}">
         </div>
     </div>
-</div>    
-
-<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=WKblfiNhM4TaaA7UVYomevIe"></script>
+</div>
+@*<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=WKblfiNhM4TaaA7UVYomevIe"></script>*@
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=RyBnkP7ebtsbpNqjf8n1M44GQsOFqgNy"></script>
 <script type="text/javascript">
     var data = { "data": [[74.438, 39.006, 1], [74.932, 38.382, 1]] };
 
-    angular.module("app").controller("IndexCtrl", function ($location, $scope, $timeout,API_Common)
-    {
-        var init = function ()
-        {
+    angular.module("app").controller("IndexCtrl", function ($location, $scope, $timeout, API_Common) {
+        var init = function () {
             // 创建Map实例
             var map = new BMap.Map("container", {});
             map.setMapStyle({ style: "light" });
             map.centerAndZoom("上海", 5);
-          
+
             //启用滚轮放大缩小
             map.enableScrollWheelZoom();
             //禁用双指操作缩放。
             map.disablePinchToZoom();
-            
+
             map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
 
             map.addControl(new BMap.ScaleControl({ anchor: BMAP_ANCHOR_TOP_LEFT }));
@@ -79,10 +76,9 @@
             map.addControl(geolocationControl);
 
             // 判断当前浏览器是否支持绘制海量点
-            if (document.createElement('canvas').getContext)
-            {
+            if (document.createElement('canvas').getContext) {
                 //添加海量点数据
-                var points = [];  
+                var points = [];
                 for (var i = 0; i < data.data.length; i++) {
                     points.push(new BMap.Point(data.data[i][0], data.data[i][1]));
                 }
@@ -99,20 +95,18 @@
                     color: '#3EC340'
                 }
                 // 初始化PointCollection
-                var pointCollection = new BMap.PointCollection(points, options);  
-                pointCollection.addEventListener('click', function (e)
-                {
+                var pointCollection = new BMap.PointCollection(points, options);
+                pointCollection.addEventListener('click', function (e) {
                     // 监听点击事件
-                    alert('单击点的坐标为：' + e.point.lng + ',' + e.point.lat);  
+                    alert('单击点的坐标为：' + e.point.lng + ',' + e.point.lat);
                 });
                 // 添加Overlay
-                map.addOverlay(pointCollection);  
+                map.addOverlay(pointCollection);
             }
-            else
-            {
+            else {
                 alert('请在chrome、safari、IE8+以上浏览器查看本示例');
             }
-            setTimeout(function () { 
+            setTimeout(function () {
                 $("#container").show();
                 map.centerAndZoom("上海", 5);
             }, 300);
