--- a/yy/yycms.admin/Views/Page/Edit.cshtml
+++ b/yy/yycms.admin/Views/Page/Edit.cshtml
@@ -258,7 +258,7 @@
 
             $(".demoTip").popover({ placement: "top", trigger: "hover" });
 
-            chat.client.compileevent = function (code, msg)
+            chat.client.CompileEvent = function (code, msg)
             {
                 if (code == 0)
                 {
