--- a/yy/yycms.admin/Views/User/Index.cshtml
+++ b/yy/yycms.admin/Views/User/Index.cshtml
@@ -79,7 +79,7 @@
                             <td>{{$index+1}}</td>
                             <td>{{d.UserName}}</td>
                             <td>
-                            <span ng-repeat="x in Roles" ng-if="d.Role==x.ID">{{x.Name}}</span>
+                            <span ng-repeat="x in Types" ng-if="d.Role==x.ID">{{x.Name}}</span>
                             </td>
                             <td title="{{d.WechatName}}">{{d.WechatNumber}}</td>
                             <td>{{d.Mobile}}</td>
