--- a/yy/src/yycms.admin/Views/Spider/Edit.cshtml
+++ b/yy/src/yycms.admin/Views/Spider/Edit.cshtml
@@ -374,7 +374,7 @@
     {
         $scope.Entity = {};
         $scope.Provinces = Provinces;
-        $scope.Citys = Citys;
+        $scope.Cities = Cities;
         $scope.Districts = Districts;
         $scope.Genders = [{ID:0,Name:'女士'},{ID:1,Name:'男士'}];
         $scope.LockFlags = [{ID:1,Name:'正常'},{ID:0,Name:'冻结'}];
