--- a/yy/src/yycms.admin/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/yy/src/yycms.admin/Areas/HelpPage/Views/Help/Index.cshtml
@@ -7,7 +7,7 @@
     ILookup<HttpControllerDescriptor, ApiDescription> apiGroups = Model.ToLookup(api => api.ActionDescriptor.ControllerDescriptor);
 }
 @RenderPage("~/Views/Shared/leftMenu.cshtml")
-<div id="content-wrapper">
+<div id="content-wrapper"  ng-controller="APICtrl">
     <div class="container-fluid">
         <div class="row">
             <div>
@@ -30,3 +30,33 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+	angular.module("app").controller("APICtrl", function ($location, $scope)
+    {
+        $scope.loading = true;
+
+        $scope.IHelp = function () {
+            var intro = introJs();
+            intro.setOptions({
+                nextLabel: '下一步 <i class="arrow_carrot-right"></i>',
+                prevLabel: ' <i class="arrow_carrot-left"></i> 上一步',
+                skipLabel: '关闭',
+                doneLabel: '关闭',
+                showProgress: false,
+                overlayOpacity: 0.4,
+                steps: [
+                  {
+                  	intro: '<h3>API</h3><p>这里是所有可用API的统一入口',
+                  },
+                  {
+                      position: "bottom",
+                      element: '.panel-heading',
+                      intro: "<p>{0} - {1} ，controllerDocumentation - ControllerName</p>"
+                  },            
+                ]
+            });
+            intro.start();
+        };
+    });
+</script>
