Add rout of api

--- a/yy/src/yycms.admin/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/yy/src/yycms.admin/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,34 +1,81 @@
 ﻿@using yycms.admin.Areas.HelpPage.Models
 @model HelpPageApiModel
-
 @{
-    var description = Model.ApiDescription;
-    ViewBag.Title = description.HttpMethod.Method + " " + description.RelativePath;
+	var description = Model.ApiDescription;
+	ViewBag.Title = description.HttpMethod.Method + " " + description.RelativePath;
 }
-
 @RenderPage("~/Views/Shared/leftMenu.cshtml")
-<div id="content-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-            <div>
-                <ol class="breadcrumb">
-                    <li><a href="/Admin/index">首页</a></li>
-                    <li><a href="/Help/index">接口列表</a></li>
-                    <li class="active">API Usage</li>
-                    <a href="" ng-click="IHelp()" style="float:right"><i class="icon_question_alt2"></i>  帮助</a>
-                </ol>
-                @Html.DisplayForModel()
-
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <div class="col-md-12 BtmLayer" id="BtmLayer">
-                            <a href="/Help" class="btn btn-success btn-lg hvr-shadow-radial">
-                                <i class="arrow_carrot-left"></i> Back
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+<div id="content-wrapper" ng-controller="APICtrl">
+	<div class="container-fluid">
+		<div class="row">
+			<div>
+				<ol class="breadcrumb">
+					<li><a href="/Admin/index">首页</a></li>
+					<li><a href="/Help/index">接口列表</a></li>
+					<li class="active">API Usage</li>
+					<a href="" ng-click="IHelp()" style="float:right"><i class="icon_question_alt2"></i>  帮助</a>
+				</ol>
+				@*<loading></loading>*@
+				@Html.DisplayForModel()
+				<div class="col-md-12">
+					<div class="form-group">
+						<div class="col-md-12 BtmLayer" id="BtmLayer">
+							<a href="/Help" class="btn btn-success btn-lg hvr-shadow-radial">
+								<i class="arrow_carrot-left"></i> Back
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
+<script type="text/javascript">
+	angular.module("app").controller("APICtrl", function ($location, $scope) {
+		$scope.loading = true;
+
+		$scope.IHelp = function () {
+			var intro = introJs();
+			intro.setOptions({
+				nextLabel: '下一步 <i class="arrow_carrot-right"></i>',
+				prevLabel: ' <i class="arrow_carrot-left"></i> 上一步',
+				skipLabel: '关闭',
+				doneLabel: '关闭',
+				showProgress: false,
+				overlayOpacity: 0.4,
+				steps: [
+                  {
+                  	intro: '<h3>API</h3><p>这里是具体API的入口',
+                  },
+                  {
+                  	position: "bottom",
+                  	element: '.panel-heading',
+                  	intro: "<p>请求数据区域</p>"
+                  },
+				  {
+				  	position: "bottom",
+				  	element: '.table',
+				  	intro: "<p>请求的参数列表</p>"
+				  },
+				  {
+				  	position: "bottom",
+				  	element: '#requestTextarea',
+				  	intro: "<p>请求的Request数据</p>"
+				  },
+				  {
+				  	position: "bottom",
+				  	element: '#responseTextarea',
+				  	intro: "<p>请求的Response数据</p>"
+				  },
+				   {
+				   	position: "bottom",
+				   	element: '.btn',
+				   	intro: "<p>开始请求数据</p>"
+				   },
+				]
+			});
+			intro.start();
+		};
+	});
+</script>
+
