--- a/yy/src/yycms.admin/Areas/HelpPage/Views/Shared/_Layout.cshtml
+++ b/yy/src/yycms.admin/Areas/HelpPage/Views/Shared/_Layout.cshtml
@@ -44,6 +44,7 @@
     <script src="/Scripts/jquery.cookie.js"></script>
     <script src="/Scripts/app.js"></script>
     <script src="/Scripts/api.js"></script>
+	<script src="/Scripts/lodash.js"></script>
     <script src="/Scripts/intro.min.js"></script>
     <script type="text/javascript">
         @{
